fix: removed poe from pre-commit hooks

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,7 +7,9 @@ pre-push:
   parallel: true
   commands:
     lint:
-      run: poe lint
+      run: ruff check --fix
+    types:
+      run: poetry run pyright
     test:
       priority: 2
       run: poe test
